# fktz

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: bot.py
src/bot/: main.py
src/fktz/bot/: __init__.py
src/fktz/core/: converter.py  presets.py
src/fktz/log/: __init__.py
